--- a/views/user/otp.ejs
+++ b/views/user/otp.ejs
@@ -28,10 +28,12 @@
 
   <!-- Navigation -->
   <nav class="absolute top-0 left-0 w-full bg-white shadow-md flex justify-center items-center z-20 h-16">
-    <div class="text-2xl font-bold text-gray-800 flex items-center" style="font-family: 'Raleway', sans-serif;">
-      <img src="./images/logo.png" class="logo bgImg h-10 w-auto" alt="logo">
-      <div class="pl-3">WOODLAND</div>
-    </div>
+    <a href="/">
+      <div class="text-2xl font-bold text-gray-800 flex items-center" style="font-family: 'Raleway', sans-serif;">
+        <img src="./images/logo.png" class="logo bgImg" alt="logo">
+        <div class="pl-2">WOODLAND</div>
+      </div>
+    </a>
   </nav>
 
   <!-- Page Wrapper -->
@@ -69,7 +71,7 @@
 
       <div class="mt-6 text-center">
         <p class="text-sm text-gray-600 mb-1">Didn't receive the code?</p>
-        <button onclick="resendOTP()" class="text-grey-600 hover:underline">Resend OTP</button>
+        <button onclick="resendOTP()" id="resendBtn" class="text-grey-700 hover:underline">Resend OTP</button>
       </div>
     </div>
   </div>
@@ -117,9 +119,13 @@
     let seconds = 60;
     let isOTPExpired = false;
     const countdown = document.getElementById('countdown');
+    const resendBtn =  document.getElementById('resendBtn')
 
     function updateTimer() {
       if (seconds > 0) {
+        resendBtn.disabled = true;
+        resendBtn.classList.remove('text-gray-700', 'hover:underline');
+        resendBtn.classList.add('text-gray-300', 'cursor-not-allowed');
         const min = String(Math.floor(seconds / 60)).padStart(2, '0');
         const sec = String(seconds % 60).padStart(2, '0');
         countdown.textContent = `${min}:${sec}`;
@@ -129,6 +135,9 @@
         isOTPExpired = true;
         countdown.textContent = 'OTP Expired';
         countdown.classList.add('font-semibold');
+        resendBtn.disabled = false;
+        resendBtn.classList.remove('text-gray-300', 'cursor-not-allowed');
+        resendBtn.classList.add('text-gray-700', 'hover:underline');
       }
     }
 
