--- a/views/user/reset-password.ejs
+++ b/views/user/reset-password.ejs
@@ -26,10 +26,12 @@
 
   <!-- Navigation -->
   <nav class="absolute top-0 left-0 w-full bg-white shadow-md flex justify-center items-center z-20 h-16">
-    <div class="text-2xl font-bold text-gray-800 flex items-center" style="font-family: 'Raleway', sans-serif;">
-      <img src="./images/logo.png" class="logo bgImg h-10 w-auto" alt="logo">
-      <div class="pl-3">WOODLAND</div>
-    </div>
+    <a href="/">
+      <div class="text-2xl font-bold text-gray-800 flex items-center" style="font-family: 'Raleway', sans-serif;">
+        <img src="./images/logo.png" class="logo bgImg h-10 w-auto" alt="logo">
+        <div class="pl-3">WOODLAND</div>
+      </div>
+    </a>
   </nav>
 
   <!-- Page Wrapper -->
@@ -126,6 +128,13 @@
           showMessage('error', 'Network error. Please try again later.');
         }
       }
+
+      //to prevent going backwards to the otp page from reset password page
+      history.pushState(null, null, location.href);
+      window.onpopstate = function () {
+      history.go(1);
+      }
+
   </script>
 
 </body>
