--- a/views/admin/adminSignin.ejs
+++ b/views/admin/adminSignin.ejs
@@ -24,10 +24,10 @@
   <div class="h-20"></div>
 
 <!-- Background Image Layer -->
-<div class="fixed inset-0 bg-cover bg-center -z-30" style="background-image: url('/assets/admin-bg.jpg');"></div>
+<div class="fixed inset-0 bg-cover bg-center -z-30" style="background-image: url('/images/adbg.jpg');"></div>
 
 <!-- Optional Dark Overlay -->
-<div class="fixed inset-0 bg-black bg-opacity-80 -z-20"></div>
+<div class="fixed inset-0 bg-black bg-opacity-60 -z-20"></div>
 
 <!-- Centered Page Wrapper -->
 <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 px-4 w-full">
