--- a/views/user/shop-details.ejs
+++ b/views/user/shop-details.ejs
@@ -121,7 +121,7 @@
     <% } %>
 
     <!-- Size Selection -->
-    <% const sizeSet = new Set(); 
+    <!-- <% const sizeSet = new Set(); 
     product.variants.forEach(v => sizeSet.add(v.size));%>
     <% if (sizeSet.size > 0) { %>
     <div class="flex items-center gap-3 flex-wrap mt-4">
@@ -132,7 +132,7 @@
         </span>
       <% }) %>
     </div>
-    <% } %>
+    <% } %> -->
 
     <!-- Quantity Control -->
     <form action="/addToCart/<%= product._id %>" method="POST" class="flex flex-col md:flex-row md:items-center gap-4 mt-6">
@@ -178,7 +178,7 @@
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6">
     <% relatedProducts.forEach(prod => { %>
       <div class="bg-white rounded-lg shadow hover:shadow-lg transition">
-        <a href="/productDetials?id=<%= prod._id %>">
+        <a href="/shopDetails?id=<%= prod._id %>">
           <img src="/uploads/product-images/<%= prod.images[0] %>" alt="<%= prod.productName %>" class="h-48 w-full object-cover rounded-t-lg">
         </a>
         <div class="p-4">
